--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 email=info@mylandmarktech.com
+registry=http://18.234.248.235:8081/repository/dada-npm/
 ##always-auth=true
 _auth=Y2hlbHZpc286QWRtaW5AMTIz=
 allowRepublish=true
